# lab6

./: .gitignore  docker-compose.yaml
go-proxy/: go.mod  main.go
server/: pyproject.toml
server/painting/: admin.py  filters.py  jwt_helper.py  models.py  permissions.py  serializers.py  urls.py
server/painting/migrations/: 0001_initial.py
server/painting/views/: ExpertisesViews.py  RequestsViews.py  UsersViews.py
server/server/: settings.py  urls.py
