[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.2.4"
djangorestframework = "^3.14.0"
psycopg2-binary = "^2.9.9"
django-cors-headers = "^4.3.1"
djangorestframework-simplejwt = "^5.3.1"
django-redis = "^5.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
